+  - new
-  - deleted
*  - modified
#  - fixed

v.0.9.3
=================
# - the checking was added: does file from "recent used files" list exist still.
    If no it's removed from list.
+ - "Scroll by tap zones" command was added. 
    There are 4 tap zones for scrolling and 1 central zone for context menu invocation.
+ - "Move by stylus" command was added.
* - some menu commands and buttons are disabled without opened file.

v.0.9.2
=================
# the filling of "Recent files" menu was broken in the 0.9.1 version.
* the binaries was rebuilt with WTL 8.0.6356

v.0.9.1
=================
+ this file added.
+ the command "Fullscreen" was added to menu.
* not implemented menu commands were grayed.

v.0.9
=================
+ The project was added to Google Code site.