@@ -9,8 +9,10 @@ v.0.9.3
     If no it's removed from list.
 + - "Scroll by tap zones" command was added. 
     There are 4 tap zones for scrolling and 1 central zone for context menu invocation.
-+ - "Move by stylus" command was added.
++ - "Move by stylus" command was added. The double click ends this mode.
 * - some menu commands and buttons are disabled without opened file.
++ - double click toggle fullscreen mode.
+# - during the up scrolling the page placement was corrected for pages which have different size.
 
 v.0.9.2
 =================
